Updated several things for Fall 2023

--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -47,6 +47,10 @@ You are free to copy and redistribute the material in any medium or format, and 
 \item You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.
 \end{itemize}
 
+\subsubsection{Notes For Instructors}
+
+This book was designed for a quarter-long (10-11 weeks) Introduction to Philosophy. In my classes, I (Davis A. Smith) cover all modules, spending 1 week per module. The CC BY license gives you the right to download and distribute the book yourself. In order to ensure that all your students have the same version of the book throughout the term you’re using it, you should upload the PDF you decide to use to your LMS rather than merely give your students a link to the source. You are also free to have the PDFs printed by your bookstore.
+
 \subsubsection{Funding}
 
 The production of this work was made possible by Professional Development funds provided by \href{https://www.pierce.ctc.edu/elad}{Pierce College's Employee Learning and Development (ELAD)}. 
