--- a/modeight.tex
+++ b/modeight.tex
@@ -64,14 +64,17 @@ Second, this theory only requires that you cause the most good (once the bad is 
 Third, this theory does not make a distinction between long term and short term consequences. This makes sense most of the time, but it could be an issue for the theory when it comes to practical use. For example, allowing your child to eat all of the candy and junk food they want will, likely, maximize their happiness in the short term. In the long-term, however, there are a bunch of different health problems and behavioral issues which arise from that sort of diet, making it wrong to feed a kid a ton of junk food.
 
 Here is an example of a course of action I could take, supposing that I came into some money:
-	
-\begin{tabular}{p{1in}|p{1in}|p{1in}|p{1in}|p{1in}}
-&Hedons (happy-points)&Dolors (unhappy-points)&Total\\
+
+\noindent	
+\begin{tabular}{p{1in}|p{1.5in}|p{1.5in}|p{1in}|p{1in}}
+Options&Hedons (happy-points)&Dolors (unhappy-points)&Total\\\hline
 
 Buying New Shoes&10&500&-490\\
 
 Donating to Oxfam&500&10&490
 \end{tabular}
+
+
 For this case, suppose that I have a choice between buying myself a new pair of shoes or donate to the charity Oxfam, which is there to alleviate world hunger and poverty. Think of 'hedons' and 'dolors' as made up units of pleasure and pain. I like to think of them relatively, so we can roughly say that donating to Oxfam will cause 50x as much good as buying the new shoes, and it will also cause a 50th of the suffering. According to the Utilitarian, this is the route you should go, make the most hedons and the least dolors.  Remember, these are not actual units, they are just conceptual tools to help understand the theory. You can use different unit sizes for different cases, just keep them the same in the same case.
 
 Utilitarianism has no room for the individual making the choice seeing themselves as special, weighing their happiness as greater. It’s the total happiness that matters, not just your happiness. So utilitarianism can call for great personal sacrifice. The happiness of a child during their lifetime might require great personal sacrifice from the parent/caretaker during the first few decades. Utilitarianism says that all beings are equal, morally speaking, so long as they are equal in their ability to feel pleasure and experience pain.
@@ -80,8 +83,8 @@ Likewise, Utilitarianism has no room for favoring the immediate consequences ove
 
 Here is another example of this at work. In this case, each of these choices on how to spend my money have different ripples through time and different amounts of people that they affect. For an interesting exercise, think about how long the results of the actions will help others and how many they help.
 	
-\begin{tabular}{p{1in}|p{1in}|p{1in}|p{1in}|p{1in}}
-&Hedons (happy-points)&Dolors (unhappy-points)&Total\\
+\begin{tabular}{p{1in}|p{1.5in}|p{1.5in}|p{1in}|p{1in}}
+Options&Hedons (happy-points)&Dolors (unhappy-points)&Total\\\hline
 Buying a new laptop&40&20&20\\
 Donating to a foodbank&80&20&60\\
 Give money to broke relative&60&20&40
