--- a/modfive.tex
+++ b/modfive.tex
@@ -53,7 +53,9 @@ This is the second jump in the reasoning and is the one which is found across th
 This is an attack on the first line of the argument. It only attacks why we think that it’s true. The argument itself is valid. The first line seems intuitive, seems right, because of the examples used. The examples pointed to are things like watches and computers, very complex things which obviously needed to have some kind of designer. But the analogy between natural complexities and a watch seemingly has strength to it, but in actuality, the similarity is quite weak. There are many commonalities between two kinds of watches, but the commonality between the eye and a watch is that both are complex, there is nothing more to go on. When the analogy is weak, the conclusion from the analogy is equally weak.
 
 Here are two arguments, so that you can see the weakness of the analogy. If you accept the first, based solely on the reasoning used, then you will also need to accept the second:
-\begin{tabular}{p{1.75in}|p{1.75in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
+Brain Argument&Guns Argument\\\hline
     The brain is like a computer.&Guns are like hammer.\\
     They both have complex, inter-working parts and it’s very clear when one part fails to function properly.&They both have metal parts and could be used to kill someone.\\
     Yet, it would be ridiculous to claim that a computer didn’t have a designer.&Yet, it would be ridiculous to restrict the purchase of hammers.\\
@@ -71,8 +73,9 @@ This is shown by looking at the jump found in line 3 of the argument. This was:
     \begin{center}The only thing which could have designed the complex structures in the natural world is God.\end{center}
 
 The point here is that even if we assume that there was a designer, we do not get that this designer was all-knowing, all-powerful, and all-good. More over, we do not get that there was only one designer. For example, in the designing of a new watch, rarely is it one person, but a team of people working together. There is no reason to think that the divine designer of the human eye was the same who designed the brain, and there is no reason to think that either or both of those designers was any of the tripartite features ascribed to God. Following the same sort of structure as before, if you like the first argument, then you will also need to like the second:
-
-\begin{tabular}{p{1.75in}|p{1.75in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
+Bodies Argument&Pyramids Argument\\\hline
     Human bodies are remarkably complex and beautiful structures.&The pyramids are remarkably complex and beautiful structures.\\
     Such structures do not appear naturally without a designer/builder.&Such structures do not appear naturally without a designer/builder.\\
     So, the Flying Spaghetti Monster, with His great noodly appendages, made them.&So, someone, named Steve, all by himself, made them.
@@ -125,7 +128,9 @@ The core different objection to this is concerning its very reasoning. Very unli
 \subsection{Limitation of the Conclusion}
 
 As with the Design Argument, there is a jump in the reasoning which is unsupported. In this case, the jump is from there being something which tuned the world/universe to be suitable for evolution/intelligent life to that thing being God. To illustrate, just as before, take the following arguments, if you accept the reasoning in the first, then you must also, by the same logic, accept the second, but they are not compatible:
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
+Fine Tuning Argument&Science Fair Argument\\\hline
     The world is suitable for human evolution.&The world is suitable for human evolution.\\
     The odds of this happening without a divine architect are next to 0.& The odds of this happening without a divine architect are next to 0.\\
     The odds of this happening with a divine architect are 100\%.&The odds of this happening with a divine architect are 100\%.\\
@@ -210,7 +215,9 @@ More over, the second line of the argument claims that nothing (at least in the 
 \subsection{Problem 3: Limitations of the conclusion}
 
 Just like with the other arguments for the existence of God, even if we accept all of their reasoning, there is still the jump. There is no reason to think that the first cause was God or any being with one or more of the tripartite features of God. It could have been a really evil kid playing with the equivalent of an ant farm. The universe could have been his ant farm. To illustrate this using other examples, take these. As before, if you accept the reasoning in the First Cause Argument, then you must also accept these, which are equally strong arguments:
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
+Quantum Argument&FSM Argument\\\hline
     If it exists in the natural world, it has a cause other than itself.&If it exists in the natural world, it has a cause other than itself.\\
     If something is a cause in the natural world, it has a further cause.&    If something is a cause in the natural world, it has a further cause.\\
     Some things exist in the natural world.&Some things exist in the natural world.\\
@@ -219,6 +226,7 @@ Just like with the other arguments for the existence of God, even if we accept a
     If that cause was random fluctuations of quantum, then random fluctuations of quantum strings exists.& If The Flying Spaghetti Monster was the cause, then it exists.\\
     Therefore, random fluctuations of quantum strings exists.&Therefore, The Flying Spaghetti Monster exists.\\
 \end{tabular}
+
 The left most argument, if I remember correctly, is roughly one given by Steven Hawking when there was a debate about this topic between physicists and theologians, but this was many years ago.
 
 \section{The Ontological Argument}
@@ -288,7 +296,9 @@ Remember how we defined God, God is the greatest possible being. What is true fo
 This was actually the inspiration behind my versions of the arguments seen in the Limitation of the Conclusion sections. It is easy to imagine the absolutely perfect island. Perfect weather, wildlife, beach, and so on (think Hawai’i without the tourists). But, that island would be more perfect if it existed (same reasoning as before). This island is the most perfect island, therefore, the perfect island must exist. We can do that for the perfect taco, the perfect wife/husband, or anything, the perfect version of it must exist. Now I have to ask, where is my perfect island?
 
 This is the Ontological Argument's equivalent of Limitation of Conclusion, but you need to be a little more careful about the counter examples used.  Sometimes, the example won't work because of the nature of the thing, for example, the perfect fictional character can't be used for this because the perfect fictional character can't exist, because then it would not be fictional. Take for example, these two arguments, which follow the same reasoning as the Ontological Argument:
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
+Significant Other Argument&Ontological Argument\\\hline
     Alex is the greatest possible significant other.&God is the greatest possible being.\\
     Any existent being is greater in some respects than non-existent beings.&Any existent being is greater in some respects than non-existent beings.\\
     The greatest possible significant other can not have anything greater than it in any relevant respects.&The greatest possible being can not have anything greater than it in any respects.\\
