--- a/modfour.tex
+++ b/modfour.tex
@@ -18,7 +18,8 @@ In this case, more often than not, you will say that she is responsible, for goo
 \section{Part 6.1:  Free Will and (Moral) Responsibility}
 
 If there is no such thing as free will, there is no such thing as moral responsibility. This is because ‘free will’ is defined as whatever is necessary to have moral responsibility. So, we now need to ask various questions which can help us narrow the field concerning this responsibility:
-\begin{tabular}{p{1.75in}|p{1.75in}|}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}|}
 Question&Likely Answer\\\hline
 Am I responsible for failing to do something I physically couldn’t do?&If I can't do it, I can't be responsible for not doing it.\\
 \hline
