--- a/modnine.tex
+++ b/modnine.tex
@@ -2,7 +2,7 @@
 \label{ch.modnine}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 \input{statusofabortion}
-\chapter{Part 20:What is an Abortion?}
+\chapter{Part 20: What is an Abortion?}
 
 This question is the start of a very heated debate which can get nasty, so please keep that in mind. I have used other heated examples before, so you should know how to handle this. For this chunk, we are just looking at what it is, not the moral status of it. Here, we are looking at the metaphysical question concerning abortion, what is it? Later, once this is settled, we will look at the ethical question, is it OK to have one? 
 
@@ -34,23 +34,25 @@ The main tie-in, and one which you will read me say several times, is that if a 
 Of course, while some philosophers and others would deny the possibility of a proof that a fetus is not a person, claiming that to do so would be to prove a contradiction or that it's not possible to prove either way (this would lead to skepticism about fetal person-hood). By the same token, others will claim that there's no need for a proof. These people claim that the moral status of a fetus, its person-hood, is too obvious to need justification. But, both sides of the debate, pro-choice and the pro-life, take their evidence and reasoning to be obvious, to an equal degree. This is much like a belief in God. Some Atheists claim that the non-existence of God is clear and obvious, while at the same time, Theists claim that the existence of God is equally obvious. This disagreement means that we can't trust our gut instincts on this issue, we need to use logic to show that one of the sides is faulty.
 
 Through this module, we will see the best arguments on both sides of the abortion debate. But, to start us off, we will look at the commonplace, pro-choice arguments. Though Warren agrees with their conclusions, she disagrees with how they got there. There are glaring issues in their reasoning. 
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
 Argument A&Argument B\\
     \begin{earg}
-    \item[] Restrictive Laws regarding abortion cause more harm than the lack of those laws.
-    \item[] Causing more harm than otherwise is always wrong.
-    \item[] Therefore, restrictive laws regarding abortions are wrong.
+    \item[1] Restrictive Laws regarding abortion cause more harm than the lack of those laws.
+    \item[2] Causing more harm than otherwise is always wrong.
+    \item[3] Therefore, restrictive laws regarding abortions are wrong.
 \end{earg}&\begin{earg}
-    \item[] Restrictive laws regarding abortion deny women the ability to control their reproduction.
-    \item[] Denying women the right to control their reproduction violates their right to control their body.
-    \item[] Violating their right to control their body is always wrong.
-    \item[] Therefore, restrictive laws regarding abortions are wrong.
+    \item[1] Restrictive laws regarding abortion deny women the ability to control their reproduction.
+    \item[2] Denying women the right to control their reproduction violates their right to control their body.
+    \item[3] Violating their right to control their body is always wrong.
+    \item[4] Therefore, restrictive laws regarding abortions are wrong.
 \end{earg}\\
 \end{tabular}
 Pro-choicers (I made that term up) have never adequately come to grips with the conceptual issues surrounding abortion. As a result, their arguments miss the mark when they try to attack the pro-life side. Their arguments avoid the fight rather than engaging in it. You can think of it as the pro-lifers are in a castle, and the pro-choicers are attacking it, but their catapults always miss.  Most, if not all, of the arguments which they give in favor of legal abortions fail to refute or even weaken the traditional pro-life argument. This is that a fetus is a human being and, therefore, abortion is murder.
 
 The pro-choice arguments tend to fall into two different categories. First, the arguments use consequentialist/utilitarian style reasoning to show that having abortions be illegal is wrong. This is exemplified by Argument A. For example, these arguments point to the terrible results of having the restrictive laws. These include things like the deaths caused by unsafe abortions, the fact that they unfairly result in harder hardship on poorer women, the fact that the lack of access results in emotional hardship, and so on. But, the pro-life side has an easy reply to this. They can claim that the tragic side effects don't, by themselves, show that the laws aren't justified (they can still be justified even with the results). This is were we can get these argument: 
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
 The Pro-Life Response to Argument A:&The Pro-Life Response to Argument B:\\
 \begin{earg}
     \item[1 ] A fetus is a being worthy of our moral consideration, same as you or me.
@@ -67,6 +69,7 @@ The Pro-Life Response to Argument A:&The Pro-Life Response to Argument B:\\
     \item[5 ] Therefore, having an abortion is always wrong.
 \end{earg}
 \end{tabular}
+
 The Pro-Life Response to Argument A , in their eyes, takes out the reasoning for the second line of Argument A. This is basically showing that there are some cases where the moral status of some behavior is not determined by the consequences. This can be supported by the very definition of murder, which is wrongful intentional killing. This kind of argument falls into the non-consequentialist style thinking and the basis there is that something are wrong regardless of the consequences. This will show up several times, the pro-life side of the debate tends to give reasons rooted in non-consequentialist style thinking. There is another pro-choice reply to this, which debates the idea that the abortion is murder in this case, further deepening the divide between the intuitions (because the reasonable response is more strongly consequentialist) 
 
 The second argument given by the pro-choicers is exemplified by Argument B. This one uses a more non-consequentialist/Kantian style reasoning, pointing out that denying a woman the ability is have an abortion is to deprive her of some manner of bodily right. For example, the right to choose when and how one bears young. This one also falls short. The Pro-Life Response to Argument B shows where this falls short. They are basically saying there that while a person has rights, those rights can't imply that it's OK to violate another's rights. For example, take property rights. It seems clear that a person has the right to remove another from their property and has the right to defend their property, but how far does that right extend? Take this example, which really did happen, but I have exaggerated for our purposes:
@@ -85,7 +88,8 @@ As I mentioned at the end of the previous page, Warren has two parts to her pape
     \factoidbox{Imagine that you have been kidnapped, and your bloodstream hooked up to that of the violinist, who happens to have an ailment that will certainly kill him unless he is permitted to share your kidneys for a period of nine months. You are a human dialysis machine. No one else can save him, since you alone have the right type of blood. He will be unconscious all that time, and you will have to stay in bed with him, but after the nine months are over he may be unplugged, completely cured, that is provided that you have cooperated. The violinist themselves had no knowledge that this would happen to them.}
 
 A common point stated about this thought experiment is that it says that you are stuck in bed for the 9-months. While this is not true in most cases of pregnancy (as in the woman can move around), there are plenty of cases of pregnancy where this is the case (as in they are stuck in bed for most of it), especially if the woman is quite small (my mom, for example, is 4' 10'') and the father is quite large (my father, for example, is 6' 2'').  But, moving on,  if the person on the pro-life side of this debate is consistent in their beliefs, if they don't have any contradictions in their reasoning, then they will need to say that you would need to go to term and be there for the full 9-months.  Despite you being forced into the situation, you will need to keep the violinist alive. They come to this from the following reasoning, which is much like their response to Argument B in the previous part:
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
 The Pro-Life Response to Argument B:&The Pro-Life Case to Stay Plugged In:\\
 \begin{earg}
     \item[0 ] (hidden line) A fetus is a person.
@@ -135,7 +139,8 @@ The plausibility of such an argument is enough to show that the Violinist analog
 \begin{center}Is a fetus a person?\end{center}
 
 As I have mentioned before, the second section of this paper concerns whether or not a fetus is a person. The point of the previous section was to show that there are some cases where abortion is OK, even if a fetus is a person. The point here is to show that a fetus is not a person, which means that abortion isn't murder, and therefore is not wrong. This is where the Fetus Question comes in very strong, this is why I also noted that we need to distinguish between 'person' and 'human'. Questions regarding personhood are metaphysical questions, does a thing have certain features? Similarly, questions regarding 'human-hood' are metaphysical questions. From this, as I have mentioned, we are able to move from an ethical question to a metaphysical one. So, let's look at the standard, non-religious, argument from the pro-life side and another argument, which doesn't look similar, but I will explain how these relate:
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
 The Standard Pro-Life Argument&The Cheese Sandwich Fallacy\\
 \begin{earg}
     \item[] It is wrong to kill innocent human beings
@@ -153,8 +158,8 @@ These two arguments might look completely different, but both of them fall into 
 In the sentence "fetuses are innocent human beings", the term 'human being' is being used to talk about a member of our species, and up until this point, I have been very consistent in the use of the term 'human' to talk about members of our species, things with the same sort of genetic make up as us. If we use this species interpretation of human, which has a long and solid history, we see that this is correct, fetuses are humans.
 
 The other time we encounter this term is in the first line "it's wrong to kill innocent human beings." If we use the case we use the genetic, or species, interpretation of the phrase 'human being', we can quickly find cases where this is wrong, even by the non-consequentialist's lights. For example, if a brain dead human has a living will saying that they should pull the plug after a few days. But, if this was said without any context, we would likely accept it, so what makes it different? Well, the use of 'human being' in this sentence, normally, means, in the most generous interpretation, where the line makes sense,  “a full-fledged member of the moral community.” We may call this the moral sense of “human” and I have been using the term ‘person’ to demark this.\footnote{There's a certain idiosyncratic grammar which I have the habit of using in the case of the word 'person'. In English, there are, it would seem, two acceptable plurals, 'people' and 'persons'. How I use them, 'people' refers to a collection of persons and 'persons' refers to beings with person-hood individually. 'People' is a collective or group sense of the plural and 'persons' is a more individualistic sense.} In general, even when we are dealing with certain interesting legal cases, this distinction between 'human' and 'person' is overlooked. For example, a person has rights, but a human may or may not have rights. Though I don't like this example personally, but corporate person-hood is an example of this. We have a non-human entity, a corporation, seen as a person. Now, I would argue that 'corporations are people' is a legal fiction, it's not actual. But, it's certainly possible, as we will see later, that there are actual, non-fictitious, non-human persons. Having a clear distinction between these in our everyday speech makes many thorny moral questions disappear, or, at the very least, makes them more intelligible. If we remove the equivocations in both of the arguments we get the following:
-
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
 The Standard Pro-Life Argument&The Cheese Sandwich Fallacy\\
 \begin{earg}
     \item[] It is wrong to kill innocent persons
@@ -331,8 +336,8 @@ There is a very innocent jump between lines 3 and 4 which can be glossed over. B
 \section{If it was wrong to kill me when I was a fetus, then it was wrong to kill anyone when they were a fetus}
 
 The author's original line used the gendered pronoun which I have replaced, but the point remains the same. Proving this line in a way that makes the entire thing still valid is a bit more difficult than normal. You see, this will appear to be inductive, which is not strong enough for philosophy, but it's not. As I have mentioned a few times in this proof, I am not special. I could have put that you were once a fetus and ran the argument in the same way and I could have put any person in this argument in place of myself and gotten the same result. Since there are no cases where the validity of this argument does not transfer to another, we are safe in making the generalization to all people. Take these two arguments, which are oddly similar:
-
-\begin{tabular}{p{1.75in}|p{1.75in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
     I Argument&Sally Argument\\\hline
     I was once a fetus.&Sally was once a fetus.\\\hline
     If I was once a fetus, then it would have been wrong to kill me when I was a fetus.&If Sally was once a fetus, then it would have been wrong to kill Sally when Sally was a fetus.\\\hline 
@@ -340,8 +345,8 @@ The author's original line used the gendered pronoun which I have replaced, but 
  \end{tabular}
 
 The first argument is the one which we currently have a proof for. But, if we take the reasoning and replace the references to myself with references to Sally, we get the same result. Now, what if I was to replace the references to Sally with some generic, like, I don't know, a human person. Take these for the comparison:
-
-\begin{tabular}{p{1.75in}|p{1.75in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
     Sally Argument&Human Person Argument\\\hline
     Sally was once a fetus.&A human person was once a fetus.\\\hline
     If Sally was once a fetus, then it would have been wrong to kill Sally when Sally was a fetus.& If a human person was once a fetus, then it would have been wrong to kill them when they were a fetus.\\\hline 
