--- a/modone.tex
+++ b/modone.tex
@@ -5,7 +5,7 @@
 Philosophy is not just a way of life, it is not just some outlook which a person takes on. It is also not the product of some really deep thinking. Philosophic thought is not philosophy. One does not have a philosophy. That's not how it works. 'My philosophy on that is...' is like saying 'my science on that is...' What they should say is 'my belief is that...' or 'I have thought long and hard about it and I think...' Philosophy is critical thinking taken to the ridiculous extreme. Since it is, at its core, thinking, one does not simply study philosophy. Philosophy is an activity, it's something that you do. Doing philosophy involves finding a stance on some issue and then coming up with reasons for that stance. This could be a stance that you hold or it could be the stance that your opposition holds in some debate.\footnote{This would be putting yourself in 'their shoes', so to speak, so that you can see where they are coming from and thereby exploit the flaws in their stance.} In order to really truly prove your point, you will want to know why another might believe otherwise and have the skills to show the errors in that reasoning. Engaging in philosophy is how you get the skills to find the errors in the reasoning. 
 
 Since philosophic activities tend to go really abstract really quickly and since the questions which philosophers tend to think about are very difficult to answer, some have claimed that Philosophy is a pointless endeavor. This is, however, not accurate. All fields of study are defined, roughly, in terms of the questions which they are trying to answer or have the ability to answer. The questions in Philosophy tend to be those which other fields can't answer. In those cases, most of the time, the standards are very high, higher than other fields can match. Sometimes, those standards are so high that some claim that they are not possible to answer. Again, this is not accurate. There are answers, even if those answers are difficult to get. Doing philosophy tends to involve the following activities:
-\begin{tabular}{p{40mm}|p{50mm}}\hline
+\begin{tabular}{p{2in}|p{3.5in}}\hline
 Philosophy Involves&Example\\\hline
 Resolving Confusion &Noticing that people misunderstand something because of a word-choice.\\\hline
 Unmasking Assumptions &Seeing that you/another hold a position for a reason which was not stated.\\\hline
@@ -17,6 +17,7 @@ Looking for Reasons &Asking yourself why a person would think/do what they are t
 Examining World-Views &Seeing whether another's explanation for something or some course of behavior is correct/accurate to the world itself. People can have wrong opinions.\\ \hline
 Questioning Conceptual Frameworks &Seeing whether a particular way of carving the world, a way of thinking about it, is better or worse than another way. We may think that the world is one way, but is it?
 \end{tabular}
+
 \section{Part 1.1: How Does One Do Philosophy?}
 \label{s:p1.1}
 As a kind of inquiry, philosophy is aimed at establishing knowledge and understanding. Even when you can't get exact and precise knowledge about a topic, you can often find interesting things to learn (for example, why you can't get that knowledge). So, rational inquiry (critical thinking, doing philosophy) may be interesting and fruitful even when we don't get straight-forward answers. Once we raise a philosophical issue, a question or puzzle, whether about the nature of justice or about the nature of reality, we want to ask what can be said for or against the various possible answers to our question. For example, if my question is 'when is it morally permissible to lie?', I look at cases where it seems OK and cases where it just seems wrong. I look at the \textbf{reasons} why they seem that way.
@@ -79,15 +80,15 @@ All four of the above examples have at least 2 different interpretations and, in
 \factoidbox{Suppose that we all collectively switched the sorts of things the words 'dog' and 'cat' pick-out. So, the word 'dog' now is used to point out the meowing critters and the word 'cat' refers to the barking ones.  In this case, it would seem that the sentence 'dogs are canines' would be false and 'dogs are feline' would be true. If we, again, flipped the meanings of the words 'feline' and 'canine', we would get that 'dogs are canines' as true, but for a totally different reason than it was originally.}
 
 But does this make truth open for interpretation? Well, no, but in a sense, yes. When we look at a language, from one perspective, we notice that things like words and sentences are nothing more than characters on a screen/page, random collections of sounds, or certain structured gestures (in the case of sign languages). Those things, on their own, don't have meaning. There must be something extra, beyond the sound and signs, which has the meaning.  Philosophers call the meaning behind a sentence a proposition. A proposition, itself, is not a sentence or a word, rather it's the meaning behind the sentences.
-
-\begin{tabular}{p{1in}|p{1in}|p{1in}}\hline
+\begin{center}
+\begin{tabular}{p{2in}|p{1.5in}|p{2in}}\hline
 Sentence &Language &Proposition\\\hline
 Snow is white &English &that snow is white\\\hline
 Schnee ist weiss &German &that snow is white\\\hline
 Nix alba est &Latin &that snow is white\\\hline
 La neige est blanche &French &that the snow is white\\\hline
 \end{tabular}
-
+\end{center}
 All of the above examples are different sentences, made clear because they are in different languages, but they all express the same proposition. The truth of a sentence is relative to the truth of the proposition attached to it, propositions are the things which are true or false, and then the truth of the proposition is determined by its correspondence with reality. Translators, at least the good ones, often take the sentence in one language, figure out the proposition connected to it, and then express the same proposition in the necessary language.\footnote{Sometimes there can be cases where a language has the ability to express a proposition which is not possible to express in another without adding something to that language or giving information beyond what was in the original statement. For example, take Cicero's Epistulae ad Familiares 9.22, the examples Cicero gives in the letter of profanity and why they make sense are  not translatable without explaining some aspect of Latin phonology and semantics.}
 
 So the proposition expressed by a sentence is not itself a linguistic thing. Propositions themselves don't have meaning, but rather they are the meaning behind a sentence. For a bit of language to be open to interpretation is for us to be able to attach different propositions (meanings) to it. But the meanings themselves are not open to further interpretation. And it is the proposition, what is meant by the sentence, which makes the statements, sentences, true or false. So, when I speak of arguments consisting of premises (the supporting evidence and their arrangement in the argument), I am talking about the core meaning behind the sentence, not the sentence itself. If we misinterpret the sentence, then we haven’t yet gotten on to the claim being made and hence probably don’t fully understand the argument. Getting clear on just what an argument says is critical to the dialectical process.
@@ -198,15 +199,14 @@ An argument is a collected series of propositions intended to establish others i
 The propositions (statements, in this case) which support others are our premises. The one being supported is the conclusion. That 'intent' bit is a heavy hitter as we will soon see.
 
 Some arguments provide better reasons for believing their conclusions than others. In case you have any doubt about that, consider the following examples:
-
-\begin{tabular}{p{1in}|p{1in}}\hline
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}\hline
 Example \exarg{linecook1}: &Example \exarg{linecook2}:\\\hline
 Sam is a line cook. &Sam is a line cook.\\
 Line cooks generally have good kitchen skills. &Line cooks generally aren't paid well.\\
 Therefore, Same can probably cook well &Therefore, Sam is probably a billionaire. 
 \end{tabular}
-
-\begin{tabular}{p{1in}|p{1in}}\hline
+\begin{tabular}{p{2.75in}|p{2.75in}}\hline
 Example \exarg{boston3}: &Example \exarg{boston4}:\\\hline
 Boston is in Massachusetts. &Boston is in California.\\
 Massachusetts is east of the Rockies.&California is west of the Rockies.\\
@@ -240,14 +240,15 @@ name=valid,
 description={A property of arguments where the truth of the premises guarantee the truth of the conclusion; i.e. it is impossible for the premises to be true and the conclusion false}
 }
 
-\begin{tabular}{p{0.5in}|p{3in}}
+\begin{tabular}{p{1in}|p{4.5in}}
+Deductive&Definition\\\hline
 D &A valid argument is an argument where if its premises are true, then its conclusion must be true.\\\hline
 D* &A valid argument is an argument where it is not possible for all of its premises to be true and its conclusion false.
 \end{tabular}
 
 That (D*) standard is the more formal way, and exact way, of claiming (D). Here are a few examples of deductively valid arguments:
-
-\begin{tabular}{p{1in}|p{1in}|p{1in}}
+\noindent
+\begin{tabular}{p{2in}|p{2in}|p{2in}}
 Example \exarg{socrates1} &Example \exarg{mammals2} &Example \exarg{raining3}\\\hline
 If Socrates is a man, then Socrates is mortal &All primates are mammals &If it's wet outside, then it's raining\\
 Socrates is a man &All humans are primates &It's not raining\\
@@ -262,8 +263,8 @@ name=sound,
 description={A property of arguments that holds if the argument is valid and has all true premises}
 }
 
-
-\begin{tabular}{p{1in}|p{1in}|p{1in}}
+\noindent
+\begin{tabular}{p{2in}|p{2in}|p{2in}}
 Example \exarg{socrates4} &Example \exarg{cookies5} &Example \exarg{raining6}\\\hline
 If Socrates the Cat is a man, then Socrates the Cat is mortal &Billy or Sally stole cookies from the jar &If it's wet outside, then it's raining\\\hline
 Socrates the Cat is mortal &Billy stole cookies &It's not wet outside\\\hline
@@ -295,8 +296,8 @@ description={An argument such that the intent behind it is \emph{merely} to make
 plural=inductive arguments
 }
 
-
-\begin{tabular}{p{1in}|p{1in}|p{1in}}
+\noindent
+\begin{tabular}{p{2in}|p{2in}|p{2in}}
 Example 1: &Example 2: &Example 3:\\\hline
 Sam is a line cook &Most things cancerous to mice are cancerous to humans &Oscar was born in North America\\
 Line cooks generally can cook well &Various chemicals in tobacco products are cancerous to mice &Oscar was not born in Mexico\\
@@ -305,7 +306,8 @@ Therefore, Sam can probably cook well &Therefore, various chemicals in tobacco p
 
 Examples 1 and 2 seem like pretty decent arguments. The premises do support the conclusion (we are looking at inductive strength here). But, none of the above arguments are, in fact, valid. It's perfectly possible for the premises to be true and the conclusion false. Sam could be a brand new cook hired because he’s the manager’s son who has never cooked in his life. The chemicals in tobacco products could be cancerous to mice but not humans.\footnote{In this case, we can only look at the information provided in the premises, same with validity, so if you disagree with this sentence, you would be correct, but that's bringing information not given as support in the argument.} Many arguments give us good reasons for accepting their conclusions even if their premises being true fails to completely guarantee the truth of the conclusion.  The intent behind all of these arguments is different. The point of these arguments is not to guarantee the conclusion, but rather to make them more likely to be true.  We judge how good such an argument is according to how strong it is.  Unlike validity, strength is a bit more wishy-washy, it comes in degrees, which is why I use the terms 'probable' and 'improbable' in the below definitions:
 
-\begin{tabular}{p{0.5in}|p{3in}}
+\begin{tabular}{p{1in}|p{4.5in}}
+Inductive&Definition\\\hline
 I &An inductively strong argument is an argument in which if its premises are true, its conclusion is probably true.\\
 I* &An inductively strong argument is an argument in which it is improbable that its conclusion is false given that its premises are true.
 \end{tabular}
@@ -399,7 +401,7 @@ This page roughly finishes up our crash course on logic and critical thinking, b
 
 The first, basic, bare-bones standard for good critical thinking, and thereby good philosophy, is that the thinking must be consistent. This is more basic than saying that it's logical or that it lines-up with reality. For some train of thought to be consistent, it needs to lack two different things. First, it can't have any contradictions. A contradiction is a case where some proposition must be both true and false (at the same time) in order for your reasoning to work. In everyday life, it is (hopefully) very rare for us to encounter a contradiction either in our own or someone else's thinking, but there are cases where they show up, such as in conspiracy theories, and we only notice them well after the stance was explained. Take, for example, a conspiracy theory which has that both the Earth is the center of the universe and that gravity is just the Earth moving upwards at an ever increasing rate. This might not seem too contradictory on the face of it, but once you start digging into what must be true for both of those statements to be true, you will find that some proposition must be both true and false at the same time. There are other more blunt examples, such as:
 
-\begin{tabular}{p{1.5in}|p{1.5in}}
+\begin{tabular}{p{2.5in}|p{2.5in}}
 Contradictory &Non-Contradictory\\\hline
 The non-existent ghosts stole the painting &The ghosts stole the painting\\\hline
 Bobby Joe committed the crime in New York (in person) while in LA. &Bobby Joe made it seem like he was in LA in order to cover up the crime.\\\hline
@@ -569,7 +571,8 @@ This leads us to the final set of questions concerning this particular accusatio
     S: What then, Meletus? Are you so wise that you realize that the wicked do wicked and the good good but I am so stupid that I have not realized this? Have I failed to recognize that if I make anyone of my associates bad, they will harm me? But still you say that I do this great evil voluntarily? I can’t believe you, Meletus, nor do I think anyone else in the world does! But, leaving that aside, either I do not corrupt them, or if I corrupt them, I do it involuntarily. This shows that you are lying either way we go. But if I corrupt them involuntarily, the law is not to haul people into court, but to take them and instruct and admonish them in private. For it is clear that if I am told about it, I shall stop doing that which I do involuntarily. But you avoided associating with me and instructing me, and were unwilling to do so, but you haul me in here, where it is the law to haul in those who need punishment, not instruction.}
 
 This is where we get Socrates' real argument against the charge. It follows a very interesting logical form, called Constructive Dilemma. It is one which Socrates, historically, had just used earlier in the day outside of the court concerning the nature of goodness. In an abstract form, the reasoning goes like this: One of two (or more) options is correct (A or B). If A is correct, then  C and if B is correct, then D. Therefore, either C or D is correct. Here is the argument for the case along with another example used by Socrates in another dialogue:
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.5in}|p{2.5in}}
 Corrupting the Youth& Piety\\
 
     Either I don't corrupt the youth or I corrupt them unintentionally.&Either something is moral because it's commanded by the gods or it's commanded by the gods because it's moral.\\
