--- a/modseven.tex
+++ b/modseven.tex
@@ -8,7 +8,9 @@
 You might have heard the term ‘meta’ before. For example, when I was in undergrad, I was explaining my Epistemology course to some friends, saying something like “it’s the study of knowledge, we are learning about knowledge”, and one person in the group said “that’s so meta!”. The term ‘meta’ comes from Greek, meaning ‘over’, and has there a similar sense to our prefix ‘trans-’ (as in ‘translate’ or ‘transfer’), which comes from Latin and has the same sense as the Greek. In English, also, there are two senses of ‘over’, the first means ‘across’, like to carry something over to another, and the second means ‘above’, as in to put something above another. ‘Meta-’ and ‘trans-’ differ in the same way. With very few exceptions (‘metaphor’, which comes from the Greek for ‘carry over’), the prefix ‘meta-’ means that you are doing something above, over, the area in question and the prefix ‘trans-’ means that you are doing something across, over, certain boundaries. In the case of 'translate', this comes from the Latin verb 'transfero', meaning "I carry over", that verb is also where we get the English verb 'transfer'.
 
 More explicitly, when \gls{meta-} is attached to a field of study, it refers to a field of study one step more abstract than it. One way to think about this is that I am now asking questions about the questions in the field. This is not just true for fields in philosophy, though once the level gets high enough, it becomes an area of philosophy, but it’s also true for any science or subject you pick. Here is a table of some examples:
-\begin{tabular}{p{0.75in}|p{1in}|p{0.9in}|p{1in}}
+
+\noindent
+\begin{tabular}{p{1in}|p{1.5in}|p{1.2in}|p{1.5in}}
 Subject&Questions &Meta-Subject&Meta-Questions\\\hline
 Biology&Concerning living organisms&Metabiology&What exactly is living? 
 
@@ -90,8 +92,9 @@ Many have looked at examples like this and have thought that there must not be a
 \section{The Cultural Differences argument}
 
 These examples, and my not so subtle  hints, point to a very interesting argument. It seems, given how I have framed it, the most socially conscious stance would be one which puts all cultural customs on equal footing, to not have some objective measure which can be used to discriminate against a culture. So, using this observation, we get this argument:
-
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
+Cultural Differences Argument&Disagreement Argument\\\hline
     Different cultures have different moral codes.&There is disagreement about morality.\\
     Therefore, there is no objective "truth" about morality.&Therefore, there's no objective fact of the matter about morality.
 \end{tabular}
@@ -101,8 +104,9 @@ But, does this show that the next module in this class is going to be gibberish?
 \subsection{Problem 1: It isn't a good argument}
 
 For an argument to be good, philosophers have a pretty high standard. The conclusion needs to follow from the premises necessarily. There can be no case where the premises are true and the conclusion false (this is called ‘validity’). If an argument is not valid, then it is not sound. The first line of the argument concerns what people believe while the conclusion concerns what is actually the case. The issue with this sort of reasoning can be seen using a similar sort of method as the Limitation of the Conclusion problems in the arguments for the existence of God. If you think that The Cultural Differences Argument is accurate, then you will, by the same reasoning, need to think that these arguments are accurate: 
-
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
+Shape of the Earth Argument&Global Warming Argument\\\hline
     Different cultures/people have different beliefs about the shape of the earth.& Different people have different beliefs about global warming.\\
     Therefore, there is no fact of the matter about the shape of the earth.&Therefore, there's no fact of the matter about global warming.\\
 \end{tabular}
@@ -142,7 +146,9 @@ Now, despite my build-up and explanation for this, there is a major issue with t
 \subsubsection{The Problem}
 
 As I mentioned above, I can use this argument, not the structure, but the argument itself, to prove that mermaids exist. Any argument with this capability will be valid, but it will not be sound, there will be a factual error in it somewhere. For this one, let's try and work out the factual error, and here it's fairly easy to spot (hint, look at the first line and the last line):
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
+First Line&Last Line\\\hline
 Cultural Imperialism is morally wrong.&There are no non-relative moral truths.
 \end{tabular}
 The problem with this argument is that it's contradictory. You are saying that the same is both true and false. In the first line, we are saying that Cultural Imperialism is wrong, which is not contradictory on its own (if you think that it can be OK, then you have included other aspects into it). Similarly, the last line says that all moral truths are relative. Again, not contradictory on its own. But, in combination, the lines conflict. The first line is a non-relative moral truth and the last line says that those don't exist. This also attacks the spirit of the argument, in that the core premises/intuition which build it up come from the idea that Cultural Imperialism is wrong, which contradicts the point it's trying to prove. 
@@ -183,13 +189,14 @@ Something is very different here. If I tried to present these as a joke, even wi
 
 Often, in real life, we get into disagreements with people. Sometimes these are serious, like whether refugees should be allowed in the country or whether global warming is occurring. Other times they are just silly, like whether broccoli is yucky or whether dark chocolate is better than milk. The second test for relativism about a subject concerns the nature of such disagreements. For this test, you need to  imagine, or actually get into, a disagreement about something. Ask yourself what the disagreement feels like. For example, take these examples:
 \factoidbox{
-\begin{tabular}{p{1.75in}|p{1.75in}}
-
-A disagreement about whether the Earth is flat.&A disagreement about a mathematical principle.\\\hline
-A disagreement about whether refugees should be allowed in the country.&A disagreement about whether slavery was bad.\\\hline
-A disagreement about whether God exists.&A disagreement about what to do in the trolley problem is permissible.\\\hline
-A disagreement about whether pineapple should go on pizza.&A disagreement about how enjoyable Buffy the Vampire Slayer was.\\\hline
-A disagreement about the best Metal band.&A disagreement about the direction of a toilet paper roll.
+\begin{tabular}{p{2.5in}|p{2.5in}}
+Disagreements A&Disagreements B\\\hline
+A disagreement about whether the Earth is flat.&A disagreement about whether pineapple should go on pizza.\\\hline
+A disagreement about a mathematical principle.&A disagreement about how enjoyable Buffy the Vampire Slayer was.\\\hline
+A disagreement about whether refugees should be allowed in the country.&A disagreement about the direction of a toilet paper roll.\\\hline
+A disagreement about whether slavery was bad.&A disagreement about the best metal band.\\\hline
+A disagreement about whether God exists.&A disagreement about flavors of ice cream.\\\hline
+A disagreement about what to do in the trolley problem.&A disagreement about a movie (how enjoyable it was).\\\hline
 \end{tabular}
  }
 
@@ -377,10 +384,13 @@ plural=expressivist
 
 
 First, as with the Error Theorist, the Expressivist claims that morality is not a feature of the world. But, it doesn't say that it's a useful fiction or anything like that. It also claims, but the same reasoning, that moral judgments are never accurate. But, it does not say that they are always wrong. I know that this last bit seems odd, so let me explain: The Moral Objectivist (Realist), Relativist, and Error Theorist all share one thing in common: When we make moral claims, we are, at least, trying to describe the world, pick out some feature in it. The Expressivist is different: They claim that when we make moral claims our intent is to express something, not describe. They think that our ethical statements/judgments aren't the sort of things which can be true/false, correct/incorrect, or accurate/inaccurate. Take these two examples: 
-\begin{tabular}{p{1in}|p{1in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
+Example A&Example B\\\hline
     Murder is wrong&Blue is a color
 \end{tabular}
-Although it may look like (A) and (B) are stating the same sort of thing, and, in fact, were we to  do a sentence/semantic diagram for these examples, they would look freakishly similar, according to the Expressivist, these are fundamentally different sorts of sentences. In linguistics, profanity is often claimed to not add any meaning to a sentence, but rather is an emotional or rhetorical expression; the Expressivist says, basically, that moral claims, like (A), are the same sort of thing, they are only emotionally/rhetorically meaningful. In the case of (B), it is expressing something true about the world, there's a collection of things, colors, and it's putting 'blue' in that collection (by one theory) or there's a thing in the world, 'blue', and assigning a feature to 'is a color' (by another theory, this is what I really work in). But, in the case of (A), we aren’t assigning a feature to murder, according to the Expressivist. Rather it is like we are saying something like:
+
+Although it may look like these examples are stating the same sort of thing, and, in fact, were we to  do a sentence/semantic diagram for these examples, they would look freakishly similar, according to the Expressivist, these are fundamentally different sorts of sentences. In linguistics, profanity is often claimed to not add any meaning to a sentence, but rather is an emotional or rhetorical expression; the Expressivist says, basically, that moral claims, like (A), are the same sort of thing, they are only emotionally/rhetorically meaningful. In the case of (B), it is expressing something true about the world, there's a collection of things, colors, and it's putting 'blue' in that collection (by one theory) or there's a thing in the world, 'blue', and assigning a feature to 'is a color' (by another theory, this is what I really work in). But, in the case of (A), we aren’t assigning a feature to murder, according to the Expressivist. Rather it is like we are saying something like:
 \begin{earg}
     \item[]BOO murder!
     \item[]Don’t murder!
