--- a/modten.tex
+++ b/modten.tex
@@ -149,7 +149,8 @@ Trying to figure out the morality of actions concerning future people is an area
 \subsection{Limiting choices:}
 
 The current generation can set up a system which would be very costly for the future generations to change and, essentially, force them to continue with that system. For example, what if we made various choices which placed the future generations into an extreme economic debt, this would force them to maintain certain policies in order to pay off said debt. Or, on a smaller scale, what if we bought houses which were tied to familial wealth with a 200 year long repayment plan? This would force the future generations to live in that house, unless they got very wealthy rather quickly. Future generations are not able to place that sort of burden on us, they can't force us to do anything (with the exception of if time-travel happens, then they could). But the limitations don't need to just be economic, they can also, for example, be intellectual. In the case of intellectual limitations, we can greatly advance in one direction which would make the alternatives woefully under-researched, making switching to the alternatives very hard because it would require the future generation to back-track and start the research from scratch. Here are two examples: 
-\begin{tabular}{p{2in}|p{2in}}
+\noindent
+\begin{tabular}{p{2.75in}|p{2.75in}}
 The Green Dictators&The Cheapest Route\\\hline
 Suppose that we know that the future generation will need to continue pursuing alternative energy sources and not transition back to coal/oil power for electricity/transportation. As a result, the current generation signs multiple treaties which make it very difficult for the countries to back out and have extreme penalties for refusing to comply with this green agenda.&Suppose that we build an infrastructure, roads, electrical lines, waterways, etc. with the easiest materials and power-sources available to progress very quickly and have great advancements. This infrastructure gets so ingrained that the transition to other sources of power and other infrastructure methods is very expensive and underdeveloped compared to where it would have been.\\
 \end{tabular}
@@ -158,14 +159,17 @@ For both of these cases, we have constrained the future generations to take a pa
 \subsection{Unidirectional Benefit:}
 
 This is a sort of reiteration of the 'Limiting choices' ability which our generation has on the future ones. It is possible for the current generation to benefit themselves at the expense of the future generation and the future generation will experience all of the cost and, in some cases, none of the benefits. In such cases, the current generation will enact policies or engage in behaviors which will benefit them in the short term, be costly in the long term, and be long dead by the time those bills come due.  The Cheapest Route case works for this example if we add in that the benefits of the rapid expansion are less than the costs to the future generations. But there are other cases:
-\begin{tabular}{p{4in}}
+\noindent
+\begin{tabular}{p{5.5in}}
 The Origins of the Automobile (this is sort-of fictional)\\\hline
-When automobiles (cars) were first becoming a product which the average American could buy, there were three different generic kinds. First, they had the steam-powered car. There were several companies producing these and they had the benefits of being familiar technology as well as able to go long distances. They weren't bought up as much because they didn't have the 'get up and go' and the speed of the other options. Second, there were the electric cars. Women consumers really liked these because they were just a push-button to get started, but they did not have the speed nor could they go long distances. And finally, there were the gasoline cars. These, with the introduction of the electric starter, had the quick start, the speed, and the ability to go long distances. Men, who were the predominate buyers, really liked these. That generation collectively mostly going with gasoline cars greatly benefited them,  but it resulted in great costs to the future generations, in the form of Global Warming. When automobiles (cars) were first becoming a product which the average American could buy, there were three different generic kinds. First, they had the steam-powered car. There were several companies producing these and they had the benefits of being familiar technology as well as able to go long distances. They weren't bought up as much because they didn't have the 'get up and go' and the speed of the other options. Second, there were the electric cars. Women consumers really liked these because they were just a push-button to get started, but they did not have the speed nor could they go long distances. And finally, there were the gasoline cars. These, with the introduction of the electric starter, had the quick start, the speed, and the ability to go long distances. Men, who were the predominate buyers, really liked these. That generation collectively mostly going with gasoline cars greatly benefited them,  but it resulted in great costs to the future generations, in the form of Global Warming. \\
+When automobiles (cars) were first becoming a product which the average American could buy, there were three different generic kinds. First, they had the steam-powered car. There were several companies producing these and they had the benefits of being familiar technology as well as able to go long distances. They weren't bought up as much because they didn't have the 'get up and go' and the speed of the other options. Second, there were the electric cars. Women consumers really liked these because they were just a push-button to get started, but they did not have the speed nor could they go long distances. And finally, there were the gasoline cars. These, with the introduction of the electric starter, had the quick start, the speed, and the ability to go long distances. Men, who were the predominate buyers, really liked these. That generation collectively mostly going with gasoline cars greatly benefited them,  but it resulted in great costs to the future generations, in the form of Global Warming.  \\
 \end{tabular}
-\begin{tabular}{p{4in}}
+\noindent
+\begin{tabular}{p{5.5in}}
 Multi-generational Mortgages\\\hline
 In some areas of the world, there are multi-generational mortgages 100+ year plans (the most famous are Japan’s 100 year mortgages, but Sweden has 105 year plans). In such cases, the future generations will be forced to pay the debt off of the house or the loan with the current generation getting the money from the loan. This will also force those generations to live in those houses until the house is paid off and able to be sold, some cases they are forced to sell the home to pay it off.
 \end{tabular}
+
 As I said previously, there are three, general, powers which the current generation has over the future generations which they don't have towards us. But this third problem deserves a page all to itself, because it leads us into a very complex and mind-bending problem, especially for certain kinds of consequentialists.
 
 \subsection{Power to bring them into being:}
